--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -62,6 +62,16 @@
     box-shadow: 0 0 0 2px rgba(9, 9, 11, 0.1);
 }
 
+/* Fix for browser autofill background color */
+.form-input:-webkit-autofill,
+.form-input:-webkit-autofill:hover,
+.form-input:-webkit-autofill:focus,
+.form-input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px var(--bg-primary) inset !important;
+    -webkit-text-fill-color: var(--text-primary) !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 .btn-primary {
     background-color: var(--primary);
     color: var(--text-inverse);
