--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -24,6 +24,8 @@
     outline: none;
     width: 100%;
     box-sizing: border-box;
+    /* Ensure textareas also inherit line-height */
+    line-height: 1.5;
 }
 
 .input-field:hover {
@@ -32,9 +34,14 @@
 
 .input-field:focus {
     border-color: var(--brand-primary);
-    box-shadow: 0 0 0 3px rgba(9, 9, 11, 0.08);
+    box-shadow: 0 0 0 2px rgba(9, 9, 11, 0.08);
 }
 
 .input-field::placeholder {
     color: var(--text-tertiary);
+}
+
+textarea.input-field {
+    min-height: 80px;
+    resize: vertical;
 }
